--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -10,8 +10,9 @@ name: myOpenWrt-CI
 on:
   schedule:
     - cron: 0 20 * * *
-  release:
-    types: [published]
+  push
+    branches:
+    - master
 
 jobs:
 
